Replace pire replique (selon distance,poids) / TODO sizedCache , more testing